--- a/gb/15/6/1/n4447323.md
+++ b/gb/15/6/1/n4447323.md
@@ -11,39 +11,33 @@
 <p>全教总表示，虽然幼照法有规定师资编制，但其他5都以高标准师资要求，不计得失照顾经济弱势的公幼及偏乡附幼，台南市却一再拿公幼师资编制开刀，对私幼师资则未尽督导查核之职，只以省钱为最大政绩，却不用心经营幼教。</p>
 <p>全教总也呼吁，不应该牺牲教育品质，甚至拿偏远地区的小朋友开刀，因此希望台南市政府针对偏远地区的附幼班级聘任2名幼教师，并依法聘任公幼厨工，同时让公幼能维持2师编制。</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/1/10/n3773745.md#1">台国教没经费 全教总：注定失败</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/1/17/n3779344.md#1">中小学教师 台64%民众盼年轻化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/8/10/n4221755.md#1">强化师资生素质 台教部补助16校</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/9/21/n4254036.md#1">捍卫幼教品质 台3千师上凯道反对修法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/11/19/n4299279.md#1">台培养未来教师 拟测潜在特质</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/5/24/n4441933.md#1">延揽国际优秀师资来台 教部拟放宽规定</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/5/26/n4443188.md#1">台原民小校受规范  难整并忧师资</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/30/n14563817.md#1">台美关税揭晓前夕 媒体传多种税率版本</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/30/n14563786.md#1">不是只有半导体 韩国瑜：让千万基层幸福国家才强大</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/30/n14563789.md#1">南台湾豪雨成灾 台政院拟编千亿治水</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">共产暴政录：公私合营（工商改造）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/28/n8535217.md#1" target="_blank">年轻秘书长年病号 幸遇法轮大法无药而愈</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/8/28/n4514519.md#1">灵感梦中来 苏轼回文茶诗二首</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/26/n14561209.md#1">【漂流传奇】洒脱一生 香港四大才子半生缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559088.md#1">【杨延昭传奇】正史中的“杨无敌”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/27/n7937461.md#1">子贡敏达多辩才 兼富甲一方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14558651.md#1">【品读宋词】花月相伴“弄”出词之妙境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563180.md#1">【直播】布鲁斯主持国务院简报会（7/29）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/30/n14563427.md#1">【唐青看时事】日本政坛大地震 右翼小党崛起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563076.md#1">【百年真相】高唱红歌 红二代忘了血泪家仇？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/28/n14561795.md#1">释永信被查细节曝光 分析指涉与官方分赃不均</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/21/n14557406.md#1">最可靠的二手SUV RAV4上榜 首名令人意外</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/28/n14562033.md#1">中国研究生学制大变革 上亿网民关注热评</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/28/n14561957.md#1">《F1电影》全球票房突破5亿美元 8月中旬上线</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/28/n14562452.md#1">释永信塌房波及娱乐圈 多部少林寺作品或烂尾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/28/n14562226.md#1">“魔形女”：《复仇者5》拍摄中 剧本未完成</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/28/n14561845.md#1">隔30年的续集 《高尔夫球也疯狂2》评价出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/27/n14561395.md#1">《惊奇4超人》北美首映票房与《超人》相当</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14562807.md#1">植物快死了怎么救？ 试一试生锈的铁钉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/27/n14561649.md#1">喝下粪水？杭州爆“全城水臭”灾难！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/9/n14367463.md#1">【食品与水】澳洲生存专家分享如何准备防灾用品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/28/n14561979.md#1">你听过心脏癌吗？ 为什么它非常罕见？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/27/n14561394.md#1">防止蚜虫危害植物 喷洒这种自制溶液有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649691.md#1">《阿凡达3》官宣中文配音 豪华阵容引期待</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646629.md#1">厨房锅具摆放一目了然 轻松下厨不费力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/6/1/n4447323.htm">师资质量减  教团忧南市幼教品质</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/15/6/1/n4447323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
